fix center align

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,6 @@ body {
   min-width: 320px;
   min-height: 100vh;
   align-items: center;
-  justify-content: ;
 }
 
 h1 {
